fix: review error solve and swagger create
