# src/controllers/review.controller.ts
@@ -42,19 +42,16 @@ const createReview = asyncHandler(async (req: Request, res: Response) => {
   if (!content || !rating || !driverId || !estimateRequestId) {
     throw new CustomError(400, "리뷰에 필요한 정보가 누락되었습니다.");
   }
-  try {
-    const review = await reviewService.createReview({
-      customerId,
-      content,
-      rating,
-      driverId,
-      estimateRequestId
-    });
-    return res.status(201).json({ message: "리뷰 작성 완료", review });
-  } catch (error: any) {
-    console.error("리뷰 생성 중 에러:", error.message, error);
-    throw new CustomError(500, "리뷰 작성 실패 (서버 내부 오류)");
-  }
+
+  const result = await reviewService.createReview({
+    customerId,
+    content,
+    rating,
+    driverId,
+    estimateRequestId
+  });
+
+  res.status(201).json({ message: "리뷰 작성 완료", review: result });
 });
 
 export default {
